my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EDEVICE/EDEVICE.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EDEVICE.dml:7:10: error EDEVICE: missing device declaration
